@@ -7,6 +7,7 @@ UOFiddler based on Ultima SDK it's a tool to view and alter almost every UO 2D c
 Version : 4.12.2
 - BildFusion Add Sharp , Clipboard, Texture Cut.
 - Make Texture, White is transparent, and black represents the transition, Texture into Texture, Colors.
+- Add triangle for Tiles TextureWindowForm
 
 Version : 4.12.1
 - Implemented copying multiple graphics to the clipboard with Ctrl+X.
