@@ -1,6 +1,7 @@
 Version : 4.12.2 #XG1
 - BildFusion Add Sharp , Clipboard, Texture Cut.
 - Make Texture, White is transparent, and black represents the transition, Texture into Texture, Colors.
+- Add triangle for Tiles TextureWindowForm
 
 Version : 4.12.1 #XG1
 - Implemented copying multiple graphics to the clipboard with Ctrl+X.
